--- a/main.css
+++ b/main.css
@@ -1,3 +1,107 @@
-body{
-    background: skyblue;
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
+body {
+  font-family: "Montserrat", sans-serif;
+  margin: auto;
+  font-weight: 400;
+  background: url("black.jpg");
+  background-size: cover;
+  background-repeat: none;
+  color: #f3f3f3;
 }
+
+nav {
+  position: fixed;
+  background: #383838;
+  width: 100%;
+  height: 50px;
+}
+
+nav a {
+  margin-right: 20px;
+}
+
+nav .basic-nav a {
+  display: block;
+  float: left;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 15px;
+}
+
+nav .media-nav {
+  margin-right: 2rem;
+}
+
+nav .media-nav a {
+  display: block;
+  float: right;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding-top: 10px;
+  font-size: 2em;
+}
+
+nav a:hover {
+  color: #ff2562;
+}
+
+nav .current {
+  background: #ff2562;
+}
+
+h1, h2 {
+  margin: 0;
+}
+
+main {
+  margin-left: 20px;
+  padding: 4rem;
+  padding-top: 6rem;
+}
+
+main h1 {
+  font-size: 4em;
+  font-weight: 400;
+}
+
+main h1 span {
+  color: #ff2562;
+}
+
+main h2 {
+  font-size: 1.5em;
+  font-weight: 400;
+}
+
+main h3 {
+  text-transform: uppercase;
+  color: #ff2562;
+  font-weight: 400;
+}
+
+main img {
+  float: right;
+  width: 250px;
+  padding: 3rem;
+}
+
+main p {
+  line-height: 1.5em;
+}
+
+main .gallery img {
+  margin: 20px;
+  padding: 0;
+  width: 20%;
+  display: block;
+  float: left;
+}
+
+main .clearfix {
+  content: '';
+  display: block;
+  clear: both;
+}
+/*# sourceMappingURL=main.css.map */
